feat: add video-box

--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -23,3 +23,11 @@
     }
   }
 }
+.container {
+  padding: 40px 88px;
+  .rs-panel-body {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 292px);
+    grid-gap: 32px;
+  }
+}
