feat: video-list

--- a/src/components/layout/index.less
+++ b/src/components/layout/index.less
@@ -1,7 +1,8 @@
 .app {
+  height: 100vh;
+  overflow: hidden;
   .app-header {
     min-height: 64px;
-
     .navbar {
       padding: 4px 25px;
       .logo {
