--- a/src/components/video-box/index.less
+++ b/src/components/video-box/index.less
@@ -1,18 +1,14 @@
 .video-box {
   display: 'inline-block';
-  width: 292px;
-  font-size: 16px;
-
   .rs-panel-body {
     display: block;
     padding: 0;
     .title {
-      width: 292px;
+      width: 100%;
       display: block;
       overflow: hidden;
       white-space: nowrap;
       text-overflow: ellipsis;
-      margin: 12px 0 16px 0;
     }
     .img-box {
       position: relative;
