--- a/src/components/layout/index.less
+++ b/src/components/layout/index.less
@@ -6,6 +6,7 @@
     .navbar {
       padding: 4px 25px;
       .logo {
+        height: 56px;
         display: grid;
         grid-template-columns: 24px 1fr;
         justify-content: center;
