--- a/src/pages/play/index.less
+++ b/src/pages/play/index.less
@@ -14,6 +14,12 @@
       font-size: 22px;
       margin-top: 24px;
     }
+    .info {
+      background-color: #f7f9fa;
+      padding: 16px 19px;
+      margin-top: 32px;
+      border-left: 3px solid #e2e4e6;
+    }
   }
   .video-list {
     margin-left: 30px;
