fix: fix some bug

--- a/src/components/layout/index.less
+++ b/src/components/layout/index.less
@@ -39,6 +39,11 @@
       .rs-navbar-nav .rs-nav-item > .rs-nav-item-content {
         padding: 10px;
       }
+
+      .avatar {
+        height: 40px;
+        margin: 8px 0px;
+      }
     }
   }
   .app-content {
