chore: fix some about style

--- a/src/pages/play/index.less
+++ b/src/pages/play/index.less
@@ -21,7 +21,11 @@
     }
   }
   .video-list {
+    height: 100%;
     margin-left: 30px;
     overflow-y: auto;
+    .more {
+      margin-top: 20px;
+    }
   }
 }
