fix: dropdown with next/link

--- a/src/components/layout/index.less
+++ b/src/components/layout/index.less
@@ -43,6 +43,9 @@
       .avatar {
         height: 40px;
         margin: 8px 0px;
+        .rs-dropdown-toggle:hover {
+          background: none;
+        }
       }
     }
   }
